--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,6 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         protocol: 'ftps'
         port: 21
-        timeout: 60000
+        timeout: 120000
+        passive: true
         verbose: true
